--- a/video.html
+++ b/video.html
@@ -24,13 +24,13 @@
 
             <h3>Introduction</h3>
             <p id="description"></p>
-            <h3>▸ Vidéo</h3>
+            <h3 id="tv">▸ Vidéo</h3>
             <div id="video-container"></div>
             
     </main>
 
     <script src="scripts/video.js"></script>
-    
+
 </body>
 
 </html>
