--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="images/X.png">
-    <title>Tutoriels - AlcyonX</title>
+    <title>Oulala! - AlcyonX</title>
     <script src="scripts/templates.js"></script>
 </head>
 <body class="grey">
