--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="images/X.png">
-    <title>Tutoriels - AlcyonX</title>
+    <title>Accueil - AlcyonX</title>
     <script src="scripts/templates.js"></script>
 </head>
 <body class="purple">
